# ephenation-client

./: .gitignore  .gitmodules  AUTHORS.md  BlenderModel.cpp  BlenderModel.h  BuildingBlocks.cpp  ChunkBlocks.cpp  ChunkObject.cpp  ChunkObject.h  ChunkProcess.cpp  ChunkProcess.h  Disclaimer.rtf  DrawText.cpp  DrawText.h  DrawTexture.cpp  DrawTexture.h  Ephenation.iss  EphenationClientLinux.cbp  EphenationClientMinGW.cbp  HealthBar.cpp  HealthBar.h  Inventory.cpp  Makefile  Makefile.mingw  Map.cpp  Map.h  MonsterDef.cpp  MonsterDef.h  Options.cpp  Options.h  README.md  RandomMonster.cpp  ScrollingMessages.h  TODO.md  TSExec.h  Teleport.cpp  Teleport.h  annotated.html  assert.h  billboard.cpp  (+315 more)
Source/: .gitignore  Atmosphere.cpp  Atmosphere.h  BlenderModel.cpp  BlenderModel.h  BuildingBlocks.cpp  BuildingBlocks.h  ChunkBlocks.cpp  ChunkBlocks.h  ChunkObject.cpp  ChunkObject.h  ChunkProcess.cpp  ChunkProcess.h  Debug.cpp  Debug.h  Doxyfile  DrawText.cpp  DrawText.h  DrawTexture.cpp  DrawTexture.h  Ephenation.iss  EphenationClientLinux.cbp  EphenationClientMinGW.cbp  HealthBar.cpp  HealthBar.h  HudTransformation.cpp  HudTransformation.h  Inventory.cpp  Inventory.h  MainEventSignals.h  Makefile  Makefile.mingw  Map.cpp  Map.h  MonsterDef.cpp  Nausea.cpp  Nausea.h  OculusRift.cpp  OculusRift.h  OpenglBuffer.cpp  (+92 more)
Source/contrib/: SimpleSignal.h  bstrlib.c  glsw.c  glsw.h
Source/dialogs/: README.md  activator.rml  credits.rml  ephenation.rcss  help.rml  login-ovr.rml  login.rml  messagedialog.rml  popup.rcss  topleveldialog.rml  topoptions.rml  userinterface-base.rcss  userinterface-ovr.rml  userinterface.rml
Source/models/: .gitignore  BasicSword.mtl  alien.dae  morran.dae  tuft.mtl
Source/shaders/: AnimationShader.cpp  BarrelDistortion.cpp  BarrelDistortion.h  ChunkShader.cpp  ChunkShader.h  ChunkShaderPicking.cpp  ChunkShaderPicking.h  ColorShader.cpp  ColorShader.h  DeferredLighting.cpp  DeferredLighting.h  DistanceBlurring.cpp  DistanceBlurring.glsl  DistanceBlurring.h  MonsterShader.cpp  MonsterShader.h  ParticleShader.cpp  ParticleShader.glsl  ParticleShader.h  ScreenSpaceReflection.cpp  ScreenSpaceReflection.glsl  ScreenSpaceReflection.h  SimpleTextureShader.cpp  SimpleTextureShader.h  StageOneShader.cpp  StageOneShader.h  TranspShader.cpp  TranspShader.h  adddynamicshadow.cpp  adddynamicshadow.h  addlocalfog.cpp  addlocalfog.h  addpointlight.cpp  addpointlight.h  addpointshadow.cpp  addpointshadow.glsl  addpointshadow.h  addssao.cpp  addssao.glsl  addssao.h  (+30 more)
Source/shapes/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Tree.cpp  Tree.h  octagon.cpp  octagon.h  quad.cpp  quad.h  quadstage1.cpp  quadstage1.h
Source/textures/: arial10.xml  arial12.xml  couriernew10.xml  gabriola18.xml  gabriola48.xml
Source/ui/: Activator.cpp  Activator.h  Credits.fl  Credits.h  Error.cpp  Error.h  HelpDialog.fl  LoginDialog.cpp  LoginDialog.fl  OptionsDialog.cpp  OptionsDialog.fl  OptionsDialog.h  ReadMe.txt  RocketGui.cpp  RocketGui.h  RocketRenderInterface.cpp  RocketRenderInterface.h  RocketSystemInterface.cpp  RocketSystemInterface.h  activator.cpp  activator.h  advancedoptions.h  base.cpp  base.h  dialog.cpp  dialog.h  dialoginput.cpp  factory.cpp  factory.h  help2.cpp  lighting.cpp  lighting.h  login.cpp  login.h  mainuserinterface.cpp  mainuserinterface.h  (+7 more)
(+620 files in other folders)
